fix(video-player): Video seeking jump by 1% instead of 1 second

--- a/src/app/shared/video-player/video-player.component.scss
+++ b/src/app/shared/video-player/video-player.component.scss
@@ -1,9 +1,13 @@
 #video-container {
+    direction: ltr !important;
     position: relative;
     margin: auto;
     background-color: #000;
     width: 100%;
     height: 100%;
+    & * {
+        direction: ltr !important;
+    }
     video {
         width: 100%;
         height: 100%;
